--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,30 +9,27 @@
         frame-src *;
         script-src 'self' 'unsafe-eval';
         style-src 'self' 'unsafe-inline';
-        connect-src 'self' wss://*.amazonaws.com  *.amazonaws.com *.amazoncognito.com;
+        connect-src 'self' wss://*.amazonaws.com *.amazonaws.com *.amazoncognito.com;
         font-src 'self' fonts.gstatic.com; 
         upgrade-insecure-requests;">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
-    <!-- ✅ Updated title -->
     <title>Banking Chatbot – Secure OTP Assistant</title>
-
-    <!-- empty favicon to avoid 404 -->
-    <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
 
     <link href="lex-web-ui-loader.css" rel="stylesheet">
     <link rel="stylesheet" href="./custom-chatbot-style.css">
+    <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <script src="lex-web-ui-loader.js"></script>
-    <script src="./initiate-loader.js"></script>
+    <script src="./chatbot-loader.js"></script>
     <script>
-  // Wait for the chatbot to load completely
-  window.addEventListener('load', function() {
-    setTimeout(() => {
-      document.title = "Banking Bot 💰";
-    }, 2000); // 2 seconds delay to override any JS title change
-  });
-</script>
+      // Wait for the chatbot to load completely
+      window.addEventListener('load', function() {
+        setTimeout(() => {
+          document.title = "Banking Bot 💰";
+        }, 2000); 
+      });
+    </script>
   </body>
 </html>
